--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '2.0'
+version: '3'
 
 services:
   one:
@@ -57,30 +57,8 @@ services:
       build_number: 8
       total_number_of_builds: 8
 
-  nine:
-    image: cucumber-example
-    restart: "no"
-    environment:
-      build_number: 8
-      total_number_of_builds: 8
-
-  ten:
-    image: cucumber-example
-    restart: "no"
-    environment:
-      build_number: 8
-      total_number_of_builds: 8
-
-  eleven:
-    image: cucumber-example
-    restart: "no"
-    environment:
-      build_number: 8
-      total_number_of_builds: 8
-
-  twelve:
-    image: cucumber-example
-    restart: "no"
-    environment:
-      build_number: 8
-      total_number_of_builds: 8
+deploy:
+  resources:
+    limits:
+      cpus: '.50'
+      memory: 50M
