--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,11 @@
 version: '3.3'
 
+deploy: &deploy
+  resources:
+    limits:
+      cpus: '.50'
+      memory: 50M
+
 services:
   one:
     image: cucumber-example
@@ -7,6 +13,7 @@ services:
     environment:
       build_number: 1
       total_number_of_builds: 8
+    <<: *deploy
 
   two:
     image: cucumber-example
@@ -57,8 +64,3 @@ services:
       build_number: 8
       total_number_of_builds: 8
 
-deploy:
-  resources:
-    limits:
-      cpus: '.50'
-      memory: 50M
