Going up to 10 executors in parallel

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,9 @@ services:
     environment:
       build_number: 2
       total_number_of_builds: 8
-    <<: *deploy
+      deploy:
+        <<: *deploy
+
 
   three:
     image: cucumber-example
