Going up to 10 executors in parallel

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,6 @@
 version: '3.3'
 
-x-deploy: &deploy
- resources:
-    limits:
-      cpus: '.50'
-      memory: '50M'
+
 
 services:
   one:
@@ -13,9 +9,11 @@ services:
     environment:
       build_number: 1
       total_number_of_builds: 8
-    deploy:
-      <<: *deploy
-
+    deploy: &deploy
+      resources:
+        limits:
+          cpus: '.50'
+          memory: '50M'
 
   two:
     image: cucumber-example
